--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
             <version>2.2.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
