--- a/src/test/webapp/WEB-INF/web.xml
+++ b/src/test/webapp/WEB-INF/web.xml
@@ -6,10 +6,10 @@
     <display-name>Archetype Created Web Application</display-name>
     <filter>
         <filter-name>SparkFilter</filter-name>
-        <filter-class>spark.servlet.SparkFilter</filter-class>
+        <filter-class>sparkfive.servlet.SparkFilter</filter-class>
         <init-param>
             <param-name>applicationClass</param-name>
-            <param-value>spark.servlet.MyApp</param-value>
+            <param-value>sparkfive.servlet.MyApp</param-value>
         </init-param>
     </filter>
 
